--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-*{  
-   margin: 0;
-   padding: 0;
+*{
+    margin: 0;
+    padding: 0;
 }
 body{
-    font-family: 'poppins', sans-serif;
+    font-family: 'Poppins',sans-serif;
 }
+.cabecalho {
